--- a/src/app/components/shared/product-card/product-card.html
+++ b/src/app/components/shared/product-card/product-card.html
@@ -2,13 +2,19 @@
   class="bg-gray-50 p-3 rounded-lg group overflow-hidden relative z-10 lg:hover:before:bg-black before:absolute before:inset-0 before:opacity-20 before:transition-all"
 >
   <a [routerLink]="'/product/'+ product()?.id" class="block">
-    <div class="w-full lg:aspect-41/50 aspect-41/40 overflow-hidden mx-auto">
-      <img
-        [src]="ImageApi + product()?.imageUrl"
-        [alt]="product()?.title"
-        class="h-full w-full object-contain max-lg:p-3"
-      />
-    </div>
+    <div class="w-full lg:aspect-41/50 aspect-41/40 overflow-hidden mx-auto relative">
+  @if (product()?.imageUrl) {
+    <img
+      [ngSrc]="product()!.imageUrl"
+      [ngSrcset]="'640w, 1024w, 1920w'"
+      fill
+      [alt]="product()?.title"
+      class="h-full w-full object-contain max-lg:p-3"
+    />
+  } @else {
+    <div class="bg-gray-200 animate-pulse h-full w-full"></div>
+  }
+</div>
 
     <div
       class="relative z-50 lg:absolute mx-auto lg:left-0 lg:right-0 lg:-bottom-80 lg:group-hover:bottom-2 bg-white lg:w-11/12 w-full py-4 px-2 rounded-lg transition-all duration-300"
