--- a/src/app/components/shared/multi-select/multi-select.html
+++ b/src/app/components/shared/multi-select/multi-select.html
@@ -7,9 +7,9 @@
               <div class="flex">
                 <div class="flex flex-auto flex-wrap">
             <!-- Selected options as chips -->
-            @for (option of selectedOptions; track option) {
+            @for (option of selectedOptions; track option.key) {
               <div class="flex justify-center items-center m-1 font-medium py-1 px-2 rounded-full text-teal-700 bg-teal-100 border border-teal-300">
-                <div class="text-xs font-normal leading-none max-w-full flex-initial">{{ option }}</div>
+                <div class="text-xs font-normal leading-none max-w-full flex-initial">{{ option.value }}</div>
                 <div class="flex flex-auto flex-row-reverse">
                   <div (click)="removeOption(option)" class="cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x hover:text-teal-400 rounded-full w-4 h-4 ml-2">
@@ -54,14 +54,14 @@
       @if (isDropdownOpen) {
         <div class="absolute shadow top-100 bg-white z-40 w-full left-0 rounded max-h-select overflow-y-auto mt-1">
           <div class="flex flex-col w-full">
-            @for (option of filteredOptions; track option) {
+            @for (option of filteredOptions; track option.key) {
               <div 
                 class="cursor-pointer w-full border-gray-100 border-b hover:bg-teal-100"
                 (click)="selectOption(option)"
               >
                 <div class="flex w-full items-center p-2 pl-2 border-l-2 border-transparent relative hover:border-teal-100">
                   <div class="w-full items-center flex">
-                    <div class="mx-2 leading-6 text-sm">{{ option }}</div>
+                    <div class="mx-2 leading-6 text-sm">{{ option.value }}</div>
                   </div>
                 </div>
               </div>
